--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -49,6 +49,7 @@
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
+    "postcss": "^8.5.3",
     "radix-ui": "^1.3.4",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
@@ -65,7 +66,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.4",
     "@tanstack/react-query-devtools": "^5.69.0",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -73,7 +74,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "prisma": "^6.5.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.4",
     "typescript": "^5"
   }
 }
